# temporal-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
temporal_agent/: README.md  activities.py  starter.py  worker.py  workflows.py
temporal_coding_agent/: README.md  activities.py  starter.py  worker.py  workflows.py
temporal_demo/: README.md  activities.py  starter.py  worker.py  workflows.py
temporal_simple_agent/: NOTES.md  README.md  activities.py  models.py  starter.py  worker.py  workflows.py
